updated skills and classes

--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
         \textit{Degrees:} B.S. Mathematics of Computation with a Minor in Geophysics and Planetary Physics \newline
         \textit{Organizations:} Hermanos Unidos; Triangle Fraternity for Engineers, Architects, and Scientists \newline
         \leftright{\textbf{College of the Canyons}}{GPA 3.55} \newline
-        \textit{Degrees:} Associates in Mathematics, Assosciates in Physics} \\ \hline \newline
+        \textit{Degrees:} Associates in Mathematics, Assosciates in Physics} \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Skills}}   &
         \multicolumn{1}{p{8cm}}{
         \textit{Programming:} C/C++, Python, \LaTeX, Matlab, JavaScript, Solidity \newline
@@ -35,17 +35,17 @@
             \multicolumn{1}{p{2.3cm}}{\textbf{Relevant Coursework}} &
                 \multicolumn{1}{p{6cm}}{Math 142: Mathematical Modeling \newline
                 Math 164: Optimization \newline
-                EPS SCI 136: Applied Geophysics
-                Physics 105: Mechanics \newline
+                EPS SCI 136: Applied Geophysics \newline
+                EPS SCI 155: Planetary Physics \newline
+                EPS SCI 156: Space Plasma Physics \newline
                 Physics 110: Electricity and Magnetism \newline
-                ECE 188: Blockchain Technology \newline
-                CS 31: Computer Science I \newline
-                CS 32: Computer Science II} \\ \hline
+                ECE 188: Blockchain Technology} \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Project \newline Experience}} &
         \multicolumn{3}{p{16cm}}{
         \textbf{Rapid: Blue Dawn CubeSat Mission -- \href{http://bruinspace.com/projects/rapid.html}{http://bruinspace.com/projects/rapid.html}} \newline
         \leftright{\textit{Title:} Assembly, Integration, \& Testing Engineer}{June 2018 - Present} \newline
-        \textit{Project:} Team is working on developing a CubeSat that will be launching on Blue Origin's New Shepard rocket
+        \textit{Project:} Team is developing a CubeSat that is launching on Blue Origin's New Shepard rocket \newline
+        \textit{Skills Used:} Python, Arduino, Documentation Writing, Circuitry, Soldering
         \begin{itemize}[noitemsep,nolistsep]
             \item Write assembly, safe-to-mate, and functional procedures
             \item Test procedures for errors and accuracy on design
@@ -53,7 +53,8 @@
         \end{itemize}
         \textbf{Idea Hacks 2019 -- \href{https://github.com/DJ-2805/muscleBot}{https://github.com/DJ-2805/muscleBot}} \newline
         \leftright{\textit{Title:} Data Analyst}{January 2019} \newline
-        \textit{Project:} Team designed RC Car that moved based off of hand motion and muscle detection
+        \textit{Project:} Team designed RC Car that moved based off of hand motion and muscle detection \newline
+        \textit{Skills Used:} Python, Arduino, Circuitry, Data Analysis
         \begin{itemize}[noitemsep,nolistsep]
             \item Calibrated muscle sensor to recognize EM pulses to turn on/off RC Car
             \item Calibrated hand motion, so that accleration data would move the car in correct motion
@@ -61,7 +62,8 @@
         \end{itemize}
         \textbf{LA Hacks 2018 -- \href{https://github.com/ryanmjacobs/4sk8}{https://github.com/ryanmjacobs/4sk8}} \newline
         \leftright{\textit{Title:} Full Stack Developer}{March 2018} \newline
-        \textit{Project:} Team developed an Arduino compass hooked up to a skateboard that would receive heading from external website
+        \textit{Project:} Team developed an Arduino compass hooked up to a skateboard that would receive heading from external website \newline
+        \textit{Skills Used:} JavaScript, Arduino, Circuitry
         \begin{itemize}[noitemsep,nolistsep]
             \item Designed back end of the website using JavaScript, so that Arduino received GPS coordinates
             \item Designed simple front-end for the website using HTML, so that user could input destination
