updated education and spacing

--- a/main.tex
+++ b/main.tex
@@ -20,27 +20,26 @@
     \leftright{\href{mailto:davidabraham@ucla.edu}{davidabraham@ucla.edu}}{\href{https://www.linkedin.com/in/daj-2805/}{linkedin.com/in/daj-2805/}}\\
 }
 \begin{tabular}{l l l l} \hline 
-    \multicolumn{1}{p{1.7cm}}{\textbf{Education}}    &                
+    \multicolumn{1}{p{1.7cm}}{\textbf{\vspace{Education}}}    & 
         \multicolumn{3}{p{17cm}}{
         \leftright{\textbf{University of California: Los Angeles, 2019}}\newline
-        \textit{Degrees:} B.S. Mathematics of Computation with a Minor in Geophysics and Planetary Physics \newline
+        \textit{Degrees:} B.S. Mathematics of Computation with a \newline Minor in Geophysics and Planetary Physics and Atmospheric and Oceanic Sciences \newline
         \textit{Organizations:} Hermanos Unidos; Triangle Fraternity for Engineers, Architects, and Scientists \newline
         \leftright{\textbf{College of the Canyons}}{GPA 3.55} \newline
-        \textit{Degrees:} Associates in Mathematics, Assosciates in Physics} \\ \hline
-    \multicolumn{1}{p{1.7cm}}{\textbf{Skills}}   &
+        \textit{Degrees:} Associates in Mathematics, Assosciates in Physics \newline} \\ \hline
+    \multicolumn{1}{p{1.7cm}}{\textbf{\vspace{Skills}}}   &
         \multicolumn{1}{p{8cm}}{
-        \textit{Programming:} C/C++, Python, \LaTeX, Matlab, JavaScript, Solidity \newline
+        \textit{Programming:} C/C++, Python, \LaTeX, Matlab \newline
         \textit{Applied Maths:} Mathematical Modeling, Numerical Methods, Optimization, Algorithms \newline
         \textit{Other:} Tutoring, Project Management, Staff Management, Public Speaking, Soldering, Milling, Machining, Lab experience, Microsoft Office}  &
-            \multicolumn{1}{p{2.3cm}}{\textbf{Relevant Coursework}} &
+            \multicolumn{1}{p{2.3cm}}{\textbf{\vspace{Relevant Coursework}}} &
                 \multicolumn{1}{p{6cm}}{Math 142: Mathematical Modeling \newline
                 Math 164: Optimization \newline
                 EPS SCI 136: Applied Geophysics \newline
                 EPS SCI 155: Planetary Physics \newline
-                EPS SCI 156: Space Plasma Physics \newline
-                Physics 110: Electricity and Magnetism \newline
-                ECE 188: Blockchain Technology} \\ \hline
-    \multicolumn{1}{p{1.7cm}}{\textbf{Project \newline Experience}} &
+                EPS SCI 140: Fluid Mechanics \newline
+                Physics 110: Electricity and Magnetism \newline} \\ \hline
+    \multicolumn{1}{p{1.7cm}}{\textbf{\vspace{Project \newline Experience}}} &
         \multicolumn{3}{p{16cm}}{
         \textbf{Rapid: Blue Dawn CubeSat Mission -- \href{http://bruinspace.com/projects/rapid.html}{http://bruinspace.com/projects/rapid.html}} \newline
         \leftright{\textit{Title:} Assembly, Integration, \& Testing Engineer}{June 2018 - Present} \newline
@@ -68,8 +67,8 @@
             \item Designed back end of the website using JavaScript, so that Arduino received GPS coordinates
             \item Designed simple front-end for the website using HTML, so that user could input destination
             \item Assisted team members with design, so that it would gather data, and output an accurate heading
-        \end{itemize} \baselineskip}  \\ \hline
-    \multicolumn{1}{p{1.7cm}}{\textbf{Work \newline Experience}} &
+        \end{itemize} \baselineskip} \\ \hline
+    \multicolumn{1}{p{1.7cm}}{\textbf{\vspace{Work \newline Experience}}} &
         \multicolumn{3}{p{16cm}}{
         \leftright{\textbf{UCLA: Institute of Transportation Studies}}{June 2018 - Present} \newline
         \textit{Title:} IT Assistant
@@ -93,7 +92,7 @@
             \item Tested pressure systems at external locations to ensure safety and upkeep
             \item Machined fittings for pressure systems
         \end{itemize}\baselineskip} \\ \hline
-    \multicolumn{1}{p{1.7cm}}{\textbf{Leadership \newline Experience}}  &
+    \multicolumn{1}{p{1.7cm}}{\textbf{\vspace{Leadership \newline Experience}}}  &
         \multicolumn{1}{p{8.5cm}}{
         \textbf{UCLA CalGeo} \newline
         \leftright{\textit{Community Service Chair}}{Fall 2017-Spring 2018}
@@ -107,7 +106,7 @@
             \item Started and manged club events
             \item Wrote budget proposals
         \end{itemize}}  &
-            \multicolumn{1}{p{1cm}}{\textbf{Clubs/ \newline Interests}}   &
+            \multicolumn{1}{p{1cm}}{\textbf{\vspace{Clubs/ \newline Interests}}}   &
                 \multicolumn{1}{p{6cm}}{
                 California Geotechnical Engineering Association [CalGeo] \newline
                 Muay Thai \newline
