--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,8 @@
         \textbf{Cell: } (661) 666-2009 \newline
         \textbf{Email: } \href{mailto:davidabraham@ucla.edu}{davidabraham@ucla.edu} \newline
         \textbf{LinkedIn: } \href{https://www.linkedin.com/in/daj-2805/}{linkedin.com/in/daj-2805/} \newline
-        \textbf{Github: } \href{https://github.com/DJ-2805}{github.com/DJ-2805}} &
+        \textbf{Github: } \href{https://github.com/DJ-2805}{github.com/DJ-2805} \newline
+        \textbf{Physics GPA: } 3.25 } &
         \multicolumn{1}{p{1.5cm}}{\textbf{\vspace{Education}}}  &
             \multicolumn{1}{p{7.4cm}}{
             \textbf{University of California: Los Angeles 2019} \newline
@@ -284,12 +285,22 @@
     \multicolumn{1}{p{2 cm}}{\textbf{Leadership \newline Experience}}  &
         \multicolumn{3}{p{16cm}}{
         \textbf{Triangle Fraternity} \newline
-        \leftright{\textit{House Manager}}{June 2019 - January 2019}
+        \leftright{\textit{House Manager}}{June 2019 - June 2020}
         \begin{itemize}[noitemsep,nolistsep]
             \item Coordinated tenants and assigned them living spaces
             \item Maintained house through repairs
             \item Called technicians to fix invasive damages
             \item Tracked a budget of \$24,000 to use for the house
+        \end{itemize}
+        
+        \textbf{Learning Assistant Program: EPSS 71 - Intro to Computing for Geoscience} \newline
+        \leftright{\textit{Learning Assistant}}{Sept 2019 - Dec 2019}
+        \begin{itemize}[noitemsep,nolistsep]
+            \item assisted students with their problems by redirecting the questions and checked for understanding
+            \item urged students to work collaboratively to check code
+            \item created worksheets, so students had more practice with code
+            \item showed students skills in debugging problems themselves when instructors weren't around to help
+            \item brought up concerns students had to TA and instructor
         \end{itemize}
         
         \textbf{UCLA CalGeo} \newline
@@ -300,7 +311,7 @@
         \end{itemize}
         
         \textbf{Astronomy and Physics Club} \newline
-        \leftright{\textit{President}}{Fall 2015 - Spring 2018}
+        \leftright{\textit{President}}{Fall 2015 - Spring 2016}
         \begin{itemize}[noitemsep,nolistsep]
             \item Started and manged club events
             \item Wrote budget proposals
@@ -313,7 +324,7 @@
     \multicolumn{1}{p{2cm}}{\textbf{Volunteer \newline Experience}}     &
         \multicolumn{3}{p{16cm}}{
         \textbf{Northridge Hospital ER} \newline
-        \leftright{\textit{ER Volunteer}}{Fall 2014 - June 2016}
+        \leftright{\textit{ER Volunteer}}{Fall 2014 - Summer 2016}
         \begin{itemize}[noitemsep,nolistsep]
             \item Stocked medical carts with necessary items for nurses
             \item assisted patients in simple requests of food or calling
